Auto generate DB <-> Backend API with go generate ./...

--- a/backend/template_gen/astra_tmpl_table.tmpl
+++ b/backend/template_gen/astra_tmpl_table.tmpl
@@ -1,5 +1,5 @@
 -- GENERATED CODE - DO NOT MODIFY BY HAND
-
+drop table if exists {{.Keyspace}}.{{.TableName}};
 create table if not exists {{.Keyspace}}.{{.TableName}} ({{range .Columns}}
     {{.Name}} {{.Type}}{{if .isPrimaryKey}} primary key{{end}}{{if .isLast}}{{- else}},{{end}}{{end}}
     );
